@@ -39,7 +39,7 @@
 /****************************************************************************
  * Included Files
  ****************************************************************************/
- 
+
 #include <nuttx/config.h>
 
 #include <nuttx/input/touchscreen.h>
@@ -116,7 +116,7 @@
  *
  * CONFIG_NXWM_DEFAULT_BACKGROUNDCOLOR - Normal background color.  Default:
  *    MKRGB(148,189,215)
- * CONFIG_NXWM_DEFAULT_SELECTEDBACKGROUNDCOLOR - Select background color. 
+ * CONFIG_NXWM_DEFAULT_SELECTEDBACKGROUNDCOLOR - Select background color.
  *    Default:  MKRGB(206,227,241)
  * CONFIG_NXWM_DEFAULT_SHINEEDGECOLOR - Color of the bright edge of a border.
  *    Default: MKRGB(255,255,255)
@@ -265,7 +265,7 @@
  * CONFIG_NXWM_STARTWINDOW_HSPACING - Horizontal spacing.  Default: 4 rows
  * CONFIG_NXWM_STARTWINDOW_ICON - The glyph to use as the start window icon
  * CONFIG_NXWM_STARTWINDOW_MQNAME - The well known name of the message queue
- *   Used to communicated from CWindowMessenger to the start window thread. 
+ *   Used to communicated from CWindowMessenger to the start window thread.
  *   Default: "/dev/nxwm"
  * CONFIG_NXWM_STARTWINDOW_MXMSGS - The maximum number of messages to queue
  *   before blocking.  Defualt 32
@@ -465,8 +465,10 @@
  * CONFIG_NXWM_CALIBRATION_CIRCLECOLOR - The color of the circle in the
  *   touchscreen calibration display.  Default:  MKRGB(255, 255, 255) (white)
  * CONFIG_NXWM_CALIBRATION_TOUCHEDCOLOR - The color of the circle in the
- *   touchscreen calibration display after the touch is recorder.  Default: 
+ *   touchscreen calibration display after the touch is recorder.  Default:
  *   MKRGB(255, 255, 96) (very light yellow)
+ * CONFIG_NXWM_CALIBRATION_FONTID - Use this default NxWidgets font ID
+ *   instead of the system font ID (NXFONT_DEFAULT).
  * CONFIG_NXWM_CALIBRATION_ICON - The ICON to use for the touchscreen
  *   calibration application.  Default:  NxWM::g_calibrationBitmap
  * CONFIG_NXWM_CALIBRATION_SIGNO - The realtime signal used to wake up the
@@ -475,6 +477,13 @@
  *   thread.  Default: SCHED_PRIORITY_DEFAULT
  * CONFIG_NXWM_CALIBRATION_LISTENERSTACK - Calibration listener thread stack
  *   size.  Default 2048
+ * CONFIG_NXWM_CALIBRATION_MARGIN
+ *   The Calbration display consists of a target press offset from the edges
+ *   of the display by this number of pixels (in the horizontal direction)
+ *   or rows (in the vertical).  The closer that you can comfortabley
+ *   position the press positions to the edge, the more accurate will be the
+ *   linear interpolation (provide that the hardware provides equally good
+ *   measurements near the edges).
  */
 
 #ifndef CONFIG_NXWM_CALIBRATION_BACKGROUNDCOLOR
@@ -493,6 +502,10 @@
 #  define CONFIG_NXWM_CALIBRATION_TOUCHEDCOLOR MKRGB(255, 255, 96)
 #endif
 
+#ifndef CONFIG_NXWM_CALIBRATION_FONTID
+#  define CONFIG_NXWM_CALIBRATION_FONTID NXFONT_DEFAULT
+#endif
+
 #ifndef CONFIG_NXWM_CALIBRATION_ICON
 #  define CONFIG_NXWM_CALIBRATION_ICON NxWM::g_calibrationBitmap
 #endif
@@ -507,6 +520,10 @@
 
 #ifndef CONFIG_NXWM_CALIBRATION_LISTENERSTACK
 #  define CONFIG_NXWM_CALIBRATION_LISTENERSTACK 2048
+#endif
+
+#ifndef CONFIG_NXWM_CALIBRATION_MARGIN
+#  define CONFIG_NXWM_CALIBRATION_MARGIN 40
 #endif
 
 /* Hexcalculator applications ***********************************************/
